--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
                     <div class="home__data">
                         <h1 class="home__title">Hi, I'am Durga</h1>
                         <h3 class="home__subtitle">Frontend developer</h3>
-                        <p class="home__description">High level experience in web design and development
-                             knowledge,producing quality work.</p>
+                        <p class="home__description">Passionate undergrad student seeking Placement opportunities to apply problem-solving abilities and utilize the strong foundation in  computers, to kick start my career. Eager to develop skills, learn from professionals and make meaningful contributions</p>
 
                         <a href="#contact" class="button button--flex">
                            Contact Me <i class="uil uil-message  button__icon"></i>
@@ -131,8 +130,7 @@
                 <img src="assets/img/Durgapic.jpeg" alt="" class="about__img">
 
                 <div class="about__data">
-                    <p class="about__description">Web developer,with extensive knowledge and years of 
-                    experience,working in web technologies and Ui / Ux design,delivering quality work .</p>
+                    <p class="about__description">Recent graduate with a keen interest in frontend development and a solid foundation in web technologies. Proficient in HTML, CSS, and JavaScript, with hands-on experience in building responsive and user-friendly web interfaces. Enthusiastic about creating seamless user experiences and staying up-to-date with the latest design and development trends. Eager to contribute to collaborative projects, learn from experienced professionals, and apply theoretical knowledge in real-world scenarios. </p>
 
                      <div class="about__info">
                         <div>
